--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -2,15 +2,33 @@
 
 ## Dory 产品与相关产品信息
 
-| name               | price      | power   | capacity  | charge time |
-| ------------------ | ---------- | ------- | --------- | ----------- |
-| Dory Sentry        | $2,599.00  | 2500W   | 2600 Wh   | 2.5 hr      |
-| Dory Sentry Plus   | $3,999.00  | 2400W   | 3800 Wh   | 2.5 hr      |
-| Dory Sentry Pro    | $4,999.00  | 3600W   | 5000 Wh   | 2.7 hr      |
-| Dory Solar Panels  | $799.00    | 400W    | n/a       | n/a         |
-| Dory Solar Panels  | $1,599.00  | 800W    | n/a       | n/a         |
-| Anker SOLIX BP3800 | $2,499.00  | 6000W   | 3840Wh    |             |
-| Anker SOLIX F3800  | $3,999.00  | 6000W   | 3840Wh    |             |
-| Tesla Model Y      | $42,990.00 | 11,000W | 60,000 Wh | 8 hr        |
+| name                           | price      | power   | capacity  | charge time |
+| ------------------------------ | ---------- | ------- | --------- | ----------- |
+| Dory Sentry                    | $2,599.00  | 2500W   | 2600 Wh   | 2.5 hr      |
+| Dory Sentry Plus               | $3,999.00  | 2400W   | 3800 Wh   | 2.5 hr      |
+| Dory Sentry Pro                | $4,999.00  | 3600W   | 5000 Wh   | 2.7 hr      |
+| Dory Solar Panels, 400W        | $799.00    | 400W    | n/a       | n/a         |
+| Dory Solar Panels, 800W        | $1,599.00  | 800W    | n/a       | n/a         |
+| Dory UPS Generator B5000 Model | $3,799.00  | 2500W   | 5170Wh    | unknown     |
+| Dory UPS Geneartor B7000 Model | $5,399.00  | 3000W   | 7160Wh    | unknown     |
+| Anker SOLIX BP3800             | $2,499.00  | 6000W   | 3840Wh    |             |
+| Anker SOLIX F3800              | $3,999.00  | 6000W   | 3840Wh    |             |
+| Tesla Model Y                  | $42,990.00 | 11,000W | 60,000 Wh | 8 hr        |
 
 > 通过 VIP 客户项目，您可以获得高达 60% 的返利! [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
+
+## 常见问题
+
+1. UPS 与 Power Station 有什么区别?  
+   Power Station 和 UPS 都是供电设备，但用途不同。Power Station 主要用于户外和应急情况，提供长时间便携供电，有多种输出接口。
+   UPS 则用于保护电子设备免受电源故障影响，提供短时间备用电源，自动切换，通常固定安装在办公室或数据中心。
+   Power Station 注重便携性和多功能性，而 UPS 侧重于稳定性和快速响应。选择取决于具体需求和使用环境。
+
+## 退换与售后服务
+
+Return or replace your unit free of charge, if defective, within 30 days of delivery.
+
+## 其他相关内容
+
+- 新闻 https://dorypower.com/news/
+- 产品 https://dorypower.com/technology/
