add contact ifnormation

--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -26,7 +26,7 @@
 
 ## 退换与售后服务
 
-Return or replace your unit free of charge, if defective, within 30 days of delivery.
+我们提供 30 天免费退换服务。你若有任何产品方面的问题，欢迎致电我们的客服团队: (216) 386-3953, [sales@dorypower.com](mailto:sales@dorypower.com)。
 
 ## 其他相关内容
 
