--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -15,7 +15,7 @@
 | Anker SOLIX F3800              | $3,999.00  | 6000W   | 3840Wh    |             |
 | Tesla Model Y                  | $42,990.00 | 11,000W | 60,000 Wh | 8 hr        |
 
-> 通过 VIP 客户项目，您可以获得高达 60% 的返利! [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
+> 通过政府的绿色退税计划，您可以额外 30% 的减免! [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
 
 ## 常见问题
 
