add VIP program

--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -30,6 +30,10 @@
    UPS 则用于保护电子设备免受电源故障影响，提供短时间备用电源，自动切换，通常固定安装在办公室或数据中心。
    Power Station 注重便携性和多功能性，而 UPS 侧重于稳定性和快速响应。选择取决于具体需求和使用环境。
 
+3. 我对公司的产品非常感兴趣，不想成为经销商，愿意兼职推广，公司有提供福利吗？
+
+   我们对于认同公司产品，愿意有限参与的客户也提供福利支持，详情请致电： [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
+
 ## 退换与售后服务
 
 我们提供 30 天免费退换服务。你若有任何产品方面的问题，欢迎致电我们的客服团队:
