--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -38,8 +38,15 @@
 
 我们提供 30 天免费退换服务。你若有任何产品方面的问题，欢迎致电我们的客服团队:
 
-旧金山湾区的代理经销商团队: Jay Lin +1 (415) 370-2887, Micheal Feng +1 (650) 302-7093。  
-其他地区的客户，请联系您的经销商或者总部销售部 (216) 386-3953, [sales@dorypower.com](mailto:sales@dorypower.com)。
+旧金山湾区的代理经销商团队:
+
+- Jay Lin +1 (415) 370-2887
+- Micheal Feng +1 (650) 302-7093
+
+其他地区的客户，请联系您的经销商或者总部销售部
+
+- (216) 386-3953
+- [sales@dorypower.com](mailto:sales@dorypower.com)
 
 ## 其他相关内容
 
