--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -32,7 +32,7 @@
 
 3. 我对公司的产品非常感兴趣，不想成为经销商，愿意兼职推广，公司有提供福利吗？
 
-   我们对于认同公司产品，愿意有限参与的客户也提供福利支持，详情请致电： [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
+   我们对于认同公司产品，愿意有限参与的客户也提供福利支持，详情请与我们[预约时间](https://kdhciddmbip.typeform.com/to/xuOBknLI)详谈。
 
 ## 退换与售后服务
 
