--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -2,19 +2,19 @@
 
 ## Dory 产品与相关产品信息
 
-| name                           | price      | power   | capacity  | charge time | tax refund |
-| ------------------------------ | ---------- | ------- | --------- | ----------- | ---------- |
-| Dory Sentry                    | $2,599.00  | 2500W   | 2600 Wh   | 2.5 hr      | no         |
-| Dory Sentry Plus               | $3,999.00  | 2400W   | 3800 Wh   | 2.5 hr      | yes        |
-| Dory Sentry Pro                | $4,999.00  | 3600W   | 5000 Wh   | 2.7 hr      | yes        |
-| Dory Sentry Pro Max            | $7,999.00  | 3600W   | 5000 Wh   | 2.7 hr      | yes        |
-| Dory Solar Panels, 400W        | $799.00    | 400W    | n/a       | n/a         | no         |
-| Dory Solar Panels, 800W        | $1,599.00  | 800W    | n/a       | n/a         | no         |
-| Dory UPS Generator B5000 Model | $3,799.00  | 2500W   | 5170Wh    | unknown     | no         |
-| Dory UPS Geneartor B7000 Model | $5,399.00  | 3000W   | 7160Wh    | unknown     | no         |
-| Anker SOLIX BP3800             | $2,499.00  | 6000W   | 3840Wh    |             | no         |
-| Anker SOLIX F3800              | $3,999.00  | 6000W   | 3840Wh    |             | no         |
-| Tesla Model Y                  | $42,990.00 | 11,000W | 60,000 Wh | 8 hr        | yes        |
+| name                           | price      | power   | capacity  | charge time | tax deducation |
+| ------------------------------ | ---------- | ------- | --------- | ----------- | -------------- |
+| Dory Sentry                    | $2,599.00  | 2500W   | 2600 Wh   | 2.5 hr      | no             |
+| Dory Sentry Plus               | $3,999.00  | 2400W   | 3800 Wh   | 2.5 hr      | yes            |
+| Dory Sentry Pro                | $4,999.00  | 3600W   | 5000 Wh   | 2.7 hr      | yes            |
+| Dory Sentry Pro Max            | $7,999.00  | 3600W   | 5000 Wh   | 2.7 hr      | yes            |
+| Dory Solar Panels, 400W        | $799.00    | 400W    | n/a       | n/a         | no             |
+| Dory Solar Panels, 800W        | $1,599.00  | 800W    | n/a       | n/a         | no             |
+| Dory UPS Generator B5000 Model | $3,799.00  | 2500W   | 5170Wh    | unknown     | no             |
+| Dory UPS Geneartor B7000 Model | $5,399.00  | 3000W   | 7160Wh    | unknown     | no             |
+| Anker SOLIX BP3800             | $2,499.00  | 6000W   | 3840Wh    |             | no             |
+| Anker SOLIX F3800              | $3,999.00  | 6000W   | 3840Wh    |             | no             |
+| Tesla Model Y                  | $42,990.00 | 11,000W | 60,000 Wh | 8 hr        | yes            |
 
 > 通过政府的绿色退税计划，部分产品可以享有额外 30% 的减免! [详情信息](https://kdhciddmbip.typeform.com/to/xuOBknLI)
 
