jytech update contact us

--- a/src/app/business/oppotunities/dory-power/Product.mdx
+++ b/src/app/business/oppotunities/dory-power/Product.mdx
@@ -40,8 +40,8 @@
 
 旧金山湾区的代理经销商团队:
 
-- Jay Lin +1 (415) 370-2887
-- Micheal Feng +1 (650) 302-7093
+- Jay Lin [+1 (415) 370-2887](https://wa.me/+14153702887)
+- Micheal Feng [+1 (650) 302-7093](https://wa.me/+16503027093)
 
 其他地区的客户，请联系您的经销商或者总部销售部
 
