update the signiture

--- a/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
+++ b/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
@@ -22,6 +22,8 @@ Dory Power 的产品能够在以下场景中为您提供无缝电力保障：
 
 顺祝商祺
 
-旧金山销售代理  
 Jay Lin  
-jay.lin@jytech.us
+(415)370-2887  
+[jay.lin@jytech.us](mailto:jay.lin@jytech.us)  
+JY Tech LLC  
+Dory Power 旧金山经销商
