update the BD letter signiture

--- a/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
+++ b/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
@@ -27,3 +27,5 @@ Jay Lin
 [jay.lin@jytech.us](mailto:jay.lin@jytech.us)  
 JY Tech LLC  
 Dory Power 旧金山经销商
+
+![QR Code Scan](/assets/images/profiles/jay-lin-qr-code.png)
