add new energy car

--- a/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
+++ b/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
@@ -1,22 +1,33 @@
 尊敬的客户，
 
-在现代社会中，电力的稳定性已经成为我们日常生活和工作中的重要支柱。Dory Power 提供的便携式电源和储能设备，能够在突发停电时为您提供可靠的电力支持，确保您的日常运作不受影响。我们的产品特别适用于高收入人群，以及办公、诊所、餐饮、零售等商业场所，还广泛应用于大学、实验室、数据中心和安防系统等需要持续电力的环境。
+随着社会对电力稳定性和环保意识的提升，Dory Power 提供的便携式电源和储能设备，为家庭、企业及各类应用场景提供了可靠的电力支持。我们的产品特别适合高收入人群，以及办公、诊所、餐饮、零售等场所，还广泛应用于大学、实验室、数据中心和安防系统等需要不间断电力的场所。
 
-Dory Power 的产品能够在以下场景中为您提供无缝电力保障：
+**Dory Power 的产品能够为您在以下场景中提供电力保障：**
 
-* 办公和商业备用电：无论是家用空调、基础电器，还是安保系统，Dory Power 的设备能够保证这些设备在停电时继续正常运作，确保您的工作和生活不被打断。
-* 大学、实验室和数据中心：重要的实验和数据处理需要持续的电力支持，Dory Power 为实验室设备和数据库提供不间断的电源切换，防止关键数据丢失。
-* 户外旅行与房车生活：Dory Power 的便携储能系统非常适合户外旅行和房车生活。无论是露营、房车自驾，还是钓鱼、打猎，您都可以随时随地为电子设备充电，享受旅途中的无限自由。
-* 太阳能充电与环保解决方案：我们的设备支持太阳能充电，无论您身处何地，都能通过环保的方式获取电力，保持设备的正常运行。
+1. **办公与商业备用电**：无论是基础电器、空调，还是安保系统，Dory Power 的电源设备能确保在停电时继续为您的工作环境供电，保持运营正常。
 
-## 为什么选择 Dory Power？
+2. **大学、实验室和数据中心**：科研与数据处理需要持续的电力供应，Dory Power 的产品可确保实验和数据安全。
 
-持久续航与快速充电：高效储能，满足各种紧急或长期电力需求。
-绿色能源支持：太阳能充电，减少碳足迹，节约能源成本。
-全美物流配送：我们覆盖全美的物流配送网络，确保您快速收到产品。
-安全可靠：每台设备都享有 100 万美金的责任险，您可以放心使用。
-技术支持不间断：Dory Power 拥有领先的技术支持团队，确保您在任何情况下都能获得帮助。
-无论您是出于日常备用电需求，还是未雨绸缪做好应急储备，Dory Power 都能为您提供最合适的电力解决方案。现在联系我们，了解更多产品详情，为您的工作、生活或户外活动提供坚实的电力保障。
+3. **户外旅行与房车生活**：我们的便携储能电源非常适合户外探险和房车旅行，无论是露营、钓鱼、打猎，还是房车自驾游，都能为您的设备提供持久电力。
+
+4. **新能源汽车充电支持**：随着新能源汽车的普及，充电需求日益增加。Dory Power 的太阳能便携电源可作为新能源汽车的备用充电站，特别适用于房车旅途中的电能补给，无需担心户外长途驾驶的续航问题。
+
+5. **太阳能充电与环保解决方案**：我们的产品支持太阳能充电，无论您在哪里，都能以环保方式为设备补充电力，减少碳足迹，响应可持续发展的需求。
+
+**特别福利信息：**
+
+- **美国工厂制造，品牌信赖**：Dory Power 是美国本土品牌，所有产品均由美国工厂制造，确保产品质量和安全性。
+- **30% 新能源退税**：购买我们的储能产品，您可享受美国政府提供的 30% 新能源退税政策，降低购置成本。
+- **100 万美金责任险/台**：每台设备均享有 100 万美金的责任险，让您使用更安心。
+
+**为什么选择 Dory Power？**
+
+- **持久续航与快速充电**：无论是家庭、企业，还是新能源汽车，我们的设备都能满足您的紧急或长期电力需求。
+- **绿色能源支持**：通过太阳能充电，减少碳排放，节约能源成本。
+- **全美物流配送**：我们覆盖全美的物流配送网络，确保您快速收到产品。
+- **技术支持不间断**：Dory Power 拥有强大的技术支持团队，随时为您提供帮助。
+
+无论您是需要日常的备用电源，还是为了应对未来的紧急状况，Dory Power 都能为您提供最合适的电力解决方案。立即联系我们，了解更多产品详情，为您的家庭、企业或新能源汽车提供强大的电力保障。
 
 期待与您合作！
 
