update the page

--- a/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
+++ b/src/app/business/oppotunities/dory-power/business-devlopment-leter/page.mdx
@@ -29,7 +29,7 @@
 
 无论您是需要日常的备用电源，还是为了应对未来的紧急状况，Dory Power 都能为您提供最合适的电力解决方案。立即联系我们，了解更多产品详情，为您的家庭、企业或新能源汽车提供强大的电力保障。
 
-<div className="bg-black p-5 rounded-lg">
+<div className="bg-gradient-to-r to-red-950 from-blue-950 p-5 rounded-lg my-3">
   <img src="https://cdn.shopify.com/s/files/1/0669/9863/2751/files/Dory_comparison_chart_Desktop-2_db5bdaf3-bbaa-4fae-8ae4-be93386e7206.png?v=1690469332" />
 </div>
 
@@ -43,4 +43,6 @@ Jay Lin
 JY Tech LLC  
 Dory Power 旧金山经销商
 
-![QR Code Scan](/assets/images/profiles/jay-lin-qr-code.png)
+<div className="bg-gray-100 p-5 rounded-lg my-3 max-w-2xl mx-auto">
+  <img src="/assets/images/profiles/jay-lin-qr-code.png" />
+</div>
